# ct312-data-mining

./: .gitignore  README.md  lab4_README.md  pyproject.toml
data/lab4/: moon_dataset.csv
data/processed/: issues_labeled.csv  label_mapping_report.json
experiments/: week02_baseline.md  week06_classifiers.md
notebooks/: week02_exploration.ipynb
outputs/lab2/results/: adaboost_results.csv  bagging_results.csv  decision_tree_results.csv  knn_results.csv  naive_bayes_iris_details.json  naive_bayes_results.csv  random_forest_results.csv  svm_results.csv
reports/: week02_notes.md  week2_knn_results.md  week2_model_comparison.md  week2_model_scores.csv
scripts/: build_dataset.py  clean_text.py  compare_models.py  features.py  run_knn.py
scripts/lab2/: 01_knn.py  02_decision_tree.py  03_naive_bayes.py  04_svm.py  05_ensemble.py  common.py
scripts/lab4/: 01_kmeans_toy.py  02_abc_customers_kmeans.py  03_abc_customers_hierarchical_compare.py  04_student_single_linkage.py  05_meanshift_3d.py  06_eurojobs.py  07_flowers.py  08_usarrests.py  09_rfm.py  10_bank.py  11_ecommerce_spending.py  12_moon.py  build_turn_in.py  common.py  run_all.py
src/github_issue_mining/: __init__.py  evaluate.py  features.py  fetch_issues.py  preprocess.py  train.py
